--- a/apiservicios/bin/apiservicios.dll.config
+++ b/apiservicios/bin/apiservicios.dll.config
@@ -19,6 +19,12 @@
     <httpRuntime targetFramework="4.8" />
   </system.web>
   <system.webServer>
+	  <httpProtocol>
+		  <customHeaders>
+			  <clear />
+			  <add name="Access-Control-Allow-Origin" value="*" />
+		  </customHeaders>
+	  </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
